src/test/deca/context/valid/homeMade/tests/test333_type_op_binaire1.deca
// test valide de la règle 3.33


{
    int i;
    float f;

    i = 7 + 7;
    f = 7.5 + 7;
    f = 7 + 7.5;
    f = 7.5 + 7.5;
    
    i = 7 - 7;
    f = 7.5 - 7;
    f = 7 - 7.5;
    f = 7.5 - 7.5;

    i = 7 * 7;
    f = 7.5 * 7;
    f = 7 * 7.5;
    f = 7.5 * 7.5;

    i = 7 / 7;
    f = 7.5 / 7;
    f = 7 / 7.5;
    f = 7.5 / 7.5;

    i = 7 % 3;

    boolean b;

    b = 7 == 7;
    b = 7 == 7.5;
    b = 7.5 == 7;
    b = 7.5 == 7.5;

    b = 7 != 7;
    b = 7 != 7.5;
    b = 7.5 != 7;
    b = 7.5 != 7.5;

    b = 7 <= 7;
    b = 7 <= 7.5;
    b = 7.5 <= 7;
    b = 7.5 <= 7.5;

    b = 7 >= 7;
    b = 7 >= 7.5;
    b = 7.5 >= 7;
    b = 7.5 >= 7.5;

    b = 7 > 7;
    b = 7 > 7.5;
    b = 7.5 > 7;
    b = 7.5 > 7.5;

    b = 7 < 7;
    b = 7 < 7.5;
    b = 7.5 < 7;
    b = 7.5 < 7.5;

    b = b && true;
    b = b || true;
    b = b == true;
    b = b != true;
}