src/test/deca/context/invalid/homeMade/tests/test333_type_op_binaire/test333_type_op_binaire6.deca
// test invalide de la règle 3.33


{
    int a = 0.5 + 0.5;
}
